--- a/blog.html
+++ b/blog.html
@@ -19,6 +19,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
   </head><!--/head-->
   <body>
     <!-- Inserte código aqui -->
@@ -67,7 +68,13 @@
                 <img src="images/blog/blog1.jpg" alt="...">
                 <div class="caption">
                     <h3>Thumbnail label</h3>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                    <ul class="list-inline">
+                    <li><i class="fa fa-user"></i>John</li>
+                    <li><i class="fa fa-folder"></i>Bootstrap</li>
+                    <li><i class="fa fa-calendar"></i>Sept 16th, 2012</li>
+                    <li><i class="fa fa-comment"></i>comments</li>
+                    </ul>
+                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elitCras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                     <p><a href="#" class="btn btn-default" role="button">Button</a></p>
                 </div>
             </div>
@@ -76,7 +83,13 @@
             <img src="images/blog/blog2.jpg" alt="...">
             <div class="caption">
                 <h3>Thumbnail label</h3>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <ul class="list-inline">
+                    <li><i class="fa fa-user"></i>John</li>
+                    <li><i class="fa fa-folder"></i>Bootstrap</li>
+                    <li><i class="fa fa-calendar"></i>Sept 16th, 2012</li>
+                    <li><i class="fa fa-comment"></i>comments</li>
+                </ul>
+                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elitCras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                 <p><a href="#" class="btn btn-default" role="button">Button</a></p>
             </div>
             </div>
@@ -115,49 +128,69 @@
             </form>
             <div class="img">
             <div class="row">
-                <div class="col-md-6">
-                    <img src="images/ads/ad1.png">
+                <div class="col-md-6 no-padding">
+                    <img class="img-responsive" src="images/ads/ad1.png">
                 </div>
-                <div class="col-md-6">
-                    <img src="images/ads/ad2.png">
+                <div class="col-md-6 no-padding">
+                    <img class="img-responsive" src="images/ads/ad2.png">
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6">
-                    <img src="images/ads/ad3.png">
+                <div class="col-md-6 no-padding">
+                    <img class="img-responsive" src="images/ads/ad3.png">
                 </div>
-                <div class="col-md-6">
-                    <img src="images/ads/ad4.png">
+                <div class="col-md-6 no-padding">
+                    <img class="img-responsive" src="images/ads/ad4.png">
                 </div>
             </div>
             </div>
+            <div class="row">
             <h4>Blog Categorias</h4>
-            <ul class="nav nav-pills">
-                <li>Categorias</li>
-                <li>Categorias</li>
-                <li>Categorias</li>
-                <li>Categorias</li>
-                <li>Categorias</li>
-                <li>Categorias</li>
-                <li>Categorias</li>
-                <li>Categorias</li>
-                <li>Categorias</li>
-                <li>Categorias</li>
+            <div class="col-md-6 no-padding">
+            <ul class="list-unstyled no-padding">
+                <li><i class="glyphicon glyphicon-chevron-right"></i>development</li>
+                <li><i class="glyphicon glyphicon-chevron-right"></i>Design</li>
+                <li><i class="glyphicon glyphicon-chevron-right"></i>Updates</li>
+                <li><i class="glyphicon glyphicon-chevron-right"></i>Tutorial</li>
+                <li><i class="glyphicon glyphicon-chevron-right"></i>News</li>
             </ul>
+            </div>
+            <div class="col-md-6 no-padding">
+            <ul class="list-unstyled">
+                <li><i class="glyphicon glyphicon-chevron-right"></i>Joomla</li>
+                <li><i class="glyphicon glyphicon-chevron-right"></i>wordpress</li>
+                <li><i class="glyphicon glyphicon-chevron-right"></i>Drupal</li>
+                <li><i class="glyphicon glyphicon-chevron-right"></i>Magento</li>
+                <li><i class="glyphicon glyphicon-chevron-right"></i>Bootstr</li>
+            </ul>
+            </div>
+            </div>
+            <div class="row">
             <h4>Tag Cloud</h4>
-            <ul class="nav nav-pills">
-            <li role="presentation" class="active"><a href="#">Home</a></li>
-            <li role="presentation" class="active"><a href="#">Home</a></li>
-            <li role="presentation" class="active"><a href="#">Home</a></li>
-            <li role="presentation" class="active"><a href="#">Home</a></li>
-            <li role="presentation" class="active"><a href="#">Home</a></li>
-            <li role="presentation" class="active"><a href="#">Home</a></li>
-            <li role="presentation" class="active"><a href="#">Home</a></li>
-            <li role="presentation" class="active"><a href="#">Home</a></li>
-            <li role="presentation" class="active"><a href="#">Home</a></li>
-            <li role="presentation" class="active"><a href="#">Home</a></li>
-            </ul>
+            <div class="col-md-12 no-padding">
+                <button class="btn btn-primary btn-sm"><a class="text-white"
+                href="#">CSS3</a></button>
+                <button class="btn btn-primary btn-sm"><a class="text-white"
+                href="#">HTML5</a></button>
+                <button class="btn btn-primary btn-sm"><a class="text-white"
+                href="#">Joomia</a></button>
+                <button class="btn btn-primary btn-sm"><a class="text-white"
+                href="#">Drupal</a></button>
+                <button class="btn btn-primary btn-sm"><a class="text-white"
+                href="#">Boostrap</a></button>
+                <button class="btn btn-primary btn-sm"><a class="text-white"
+                href="#">jQuery</a></button>
+                <button class="btn btn-primary btn-sm"><a class="text-white"
+                href="#">Tutorial</a></button>
+                <button class="btn btn-primary btn-sm"><a class="text-white"
+                href="#">Update</a></button>
+            </div>
+            </div>
+            <div class="row">
+            <div class="col-md-12 no-padding">
             <h4>Facebook Fanpage</h4>
+            </div>
+            </div>
         </div>
         </div>
         </div>
